--- a/Babel17_Interpreter/nbproject/project.properties
+++ b/Babel17_Interpreter/nbproject/project.properties
@@ -52,7 +52,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=com.babel17.interpreter.Examples
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
