completed Mini Babel-17 interpreter

--- a/Mini_Babel17/nbproject/project.properties
+++ b/Mini_Babel17/nbproject/project.properties
@@ -18,14 +18,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/Mini_Babel17.jar
 dist.javadoc.dir=${dist.dir}/scaladoc
 excludes=
-file.reference.Babel17_ANTLR_Parser.jar=/Users/stevenobua/Programming/babel-17/Babel17_ANTLR_Parser/dist/Babel17_ANTLR_Parser.jar
-file.reference.Babel17_Interpreter.jar=/Users/stevenobua/Programming/babel-17/Babel17_Interpreter/dist/Babel17_Interpreter.jar
+file.reference.Babel17_Interpreter_Bundle.jar=/Users/stevenobua/Programming/babel-17/Babel17_Interpreter/store/Babel17_Interpreter_Bundle.jar
+file.reference.scala-library.jar=/Users/stevenobua/scala-2.8.0.RC7/lib/scala-library.jar
 includes=**
 jar.compress=false
 java.platform.active=java_default_platform
 javac.classpath=\
-    ${file.reference.Babel17_ANTLR_Parser.jar}:\
-    ${file.reference.Babel17_Interpreter.jar}
+    ${file.reference.scala-library.jar}:\
+    ${file.reference.Babel17_Interpreter_Bundle.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
