--- a/Mini_Babel17/nbproject/project.properties
+++ b/Mini_Babel17/nbproject/project.properties
@@ -24,8 +24,8 @@ includes=**
 jar.compress=false
 java.platform.active=java_default_platform
 javac.classpath=\
-    ${file.reference.scala-library.jar}:\
-    ${file.reference.Babel17_Interpreter_Bundle.jar}
+    ${file.reference.Babel17_Interpreter_Bundle.jar}:\
+    ${file.reference.scala-library.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
