updated netbeans plugin

--- a/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
+++ b/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
@@ -1,3 +1,5 @@
+CTL_Run91Babel17=Run Babel-17 program
+CTL_RunBabel17=Run Babel-17 program
 LBL_Babel17_loader_name=Babel-17 Files
 OpenIDE-Module-Name=Babel-17 Netbeans Module
 OpenIDE-Module-Short-Description=Adds support for programming in Babel-17
