--- a/Babel17_Netbeans_Module/nbproject/project.properties
+++ b/Babel17_Netbeans_Module/nbproject/project.properties
@@ -1,3 +1,8 @@
 file.reference.Babel17_Antlr_Parser.jar=release/modules/ext/Babel17_Antlr_Parser.jar
 javac.source=1.5
 javac.compilerargs=-Xlint -Xlint:-serial
+keystore=nbproject/private/keystore
+license.file=src/com/babel17/netbeans/license.txt
+nbm.homepage=http://www.babel-17.com
+nbm.module.author=Steven Obua
+nbm_alias=stevenobua
