--- a/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
+++ b/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
@@ -1,7 +1,14 @@
 CTL_Run91Babel17=Run Babel-17 program
 CTL_RunBabel17=Run Babel-17 program
 LBL_Babel17_loader_name=Babel-17 Files
-OpenIDE-Module-Name=Babel-17 Netbeans Module
+OpenIDE-Module-Long-Description=\
+    Babel-17 is a new multi-paradigm programming language for dynamically-typed, purely functional structured programming. \
+    It combines many features like concurrency and optional lazy evaluation into one coherent design. \
+    More information about the Babel-17 language is available at http://www.babel-17.com.\n\n\
+    This plugin allows you to edit and run Babel-17 programs. \
+    Syntax- and error-highlighting are provided, and you can jump from error locations or exception traces in the output window directly to the location in the source code. \
+    The plugin is being actively developed and maintained by the creator of the Babel-17 language and will always fully support the latest and greatest features of Babel-17.
+OpenIDE-Module-Name=Babel-17 NetBeans Module
 OpenIDE-Module-Short-Description=Adds support for programming in Babel-17
 Services/MIMEResolver/Babel17Resolver.xml=Babel-17 Files
 Templates/Other/Babel17Template.babel17=Empty Babel-17 file
