changed grammar for Babel-17 v0.3

--- a/Babel17_Naive_Interpreter/nbproject/private/private.properties
+++ b/Babel17_Naive_Interpreter/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=/Users/stevenobua/Programming/babel-17/Babel17_Interpreter/src/com/babel17/examples/basic/scratchbook.b17
+application.args=/Users/stevenobua/Programming/babel-17/Babel17_Interpreter/src/com/babel17/examples/basic/v3tests.babel17
 compile.on.save=false
 do.depend=false
 do.jar=true
