--- a/Babel17_Naive_Interpreter/nbproject/project.properties
+++ b/Babel17_Naive_Interpreter/nbproject/project.properties
@@ -47,7 +47,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.babel17.naive.Tree2Program
+main.class=com.babel17.naive.Interpreter
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
