properly check if 'this' is in scope

--- a/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
+++ b/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
@@ -20,15 +20,13 @@ constructor=Constructor
 comment=Comment
 number=Number
 operator=Operator
+keyword_operator=Keyword Operator
 string=String
 separator=Separator
 whitespace=Whitespace
 bracket=Bracket
 boolean=Boolean
 math=Further Unicode Symbols
-symbol_and=Symbol: And
-symbol_or=Symbol: Or
-symbol_not=Symbol: Not
 symbol_less_eq=Symbol: Less or Equivalent
 symbol_greater_eq=Symbol: Greater or Equivalent
 symbol_arrow=Symbol: Arrow
@@ -37,4 +35,4 @@ symbol_double_colon=Symbol: Double Colon
 symbol_ellipsis=Symbol: Ellipsis
 symbol_equal=Symbol: Equivalent
 symbol_not_equal=Symbol: Not Equivalent
-keyword_op=Keyword Operator
+
