introduced Babel-17 projects in Netbeans Plugin

--- a/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
+++ b/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
@@ -11,8 +11,11 @@ OpenIDE-Module-Long-Description=\
 OpenIDE-Module-Name=Babel-17 NetBeans Module
 OpenIDE-Module-Short-Description=Adds support for programming in Babel-17
 Services/MIMEResolver/Babel17Resolver.xml=Babel-17 Files
-Templates/Other/Babel17Template.babel17=Empty Babel-17 file
+Templates/Babel17/Babel17Template.b17=Empty Babel-17 file
+Templates/Babel17=Babel-17
 
+Templates/Project/Babel17/Babel17Project1Project.zip=Babel-17 Project
+Templates/Project/Babel17/Babel17ProjectProject.zip=Babel-17 Project
 text/x-babel17=Babel-17
 identifier=Identifier
 keyword=Keyword
