--- a/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
+++ b/Babel17_Netbeans_Module/src/com/babel17/netbeans/Bundle.properties
@@ -1,5 +1,5 @@
-CTL_Run91Babel17=Run Babel-17 program
-CTL_RunBabel17=Run Babel-17 program
+CTL_Run91Babel17=Run Babel-17 script
+CTL_UnittestBabel17=Run Babel-17 unit test(s)
 LBL_Babel17_loader_name=Babel-17 Files
 OpenIDE-Module-Long-Description=\
     Babel-17 is a new multi-paradigm programming language for dynamically-typed, purely functional structured programming. \
