fixed several issues uncovered by writing unit tests

--- a/Babel17_Netbeans_Module/nbproject/project.properties
+++ b/Babel17_Netbeans_Module/nbproject/project.properties
@@ -1,7 +1,7 @@
 file.reference.antlr-runtime-3.1.3.jar=release/modules/ext/antlr-runtime-3.1.3.jar
 file.reference.Babel17_Antlr_Parser.jar=release/modules/ext/Babel17_Antlr_Parser.jar
+file.reference.Babel17_ANTLR_Parser.jar=release/modules/ext/Babel17_ANTLR_Parser.jar
 file.reference.Babel17_Interpreter.jar=release/modules/ext/Babel17_Interpreter.jar
-file.reference.Babel17_Naive_Interpreter.jar=release/modules/ext/Babel17_Naive_Interpreter.jar
 file.reference.functionaljava.jar=release/modules/ext/functionaljava.jar
 file.reference.scala-library.jar=release/modules/ext/scala-library.jar
 javac.source=1.5
