--- a/Babel17_Interpreter/nbproject/project.properties
+++ b/Babel17_Interpreter/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.antlr-runtime-3.1.3.jar=../Third_Party_Libs/antlr-runtime-3.1.3.jar
+file.reference.appengine-api.jar=/Users/stevenobua/Downloads/appengine-java-sdk-1.5.1/lib/impl/appengine-api.jar
 file.reference.Babel17_Interpreter-src=src
 file.reference.functionaljava.jar=../Third_Party_Libs/functionaljava.jar
 includes=**
@@ -33,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.Babel17_ANTLR_Parser.jar}:\
     ${file.reference.antlr-runtime-3.1.3.jar}:\
-    ${file.reference.functionaljava.jar}
+    ${file.reference.functionaljava.jar}:\
+    ${file.reference.appengine-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
